<resources>
    <string name="app_name">Vmall</string>
    <string name="default_failure">"抱歉，系统繁忙。
请检查华为商城是否被手机管理软件禁用网络，或稍后重试"</string>
    <string name="hint">提示</string>
    <string name="not_gps">您的GPS尚未开启，是否开启？</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_wifi">网络未连接，请检查网络是否开启</string>
    <string name="new_version_title">版本更新</string>
    <string name="new_version_msg">您当前版本为：%1$s,最新版本为%2$s,为了确保您更好的用户体验，请更新版本！</string>
    <string name="check_version_ok">您当前已经是最新版本</string>
    <string name="download_version_failure">下载版本失败</string>
    <string name="enter">确定</string>
    <string name="cancle">取消</string>
    <string name="quit">退出应用</string>
    <string name="media_play_failure">文件播放失败</string>
    <string name="media_is_empry">媒体文件不能为空！！！</string>
    <string name="error">错误</string>
    <string name="video_error">视频播放无法打开</string>
    <string name="cancel">Cancel</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hours">时</string>
    <string name="minutes">分</string>
    <string name="seconds">秒</string>
    <string name="confirm">OK</string>
    <string name="downloading">Downloading</string>
    <string name="cloudpush_version_value">2707</string>
    <string name="CS_error_login_pwd_message">Incorrect password. Please reenter.</string>
    <string name="CS_input_password">Password</string>
    <string name="CS_password_input_invalid">Invalid password character.</string>
    <string name="CS_waiting_progress_message">Please wait.</string>
    <string name="CS_server_network_error">Network server not available. Please retry later.</string>
    <string name="CS_network_connect_error">No Internet connection. Please check your network settings.</string>
    <string name="CS_notification">Information</string>
    <string name="CS_system_error_tip">System error. Please log in again.</string>
    <string name="CS_log_in">Log in</string>
    <string name="CS_forget_password">Forgot password?</string>
    <string name="CS_register_now">Register</string>
    <string name="CS_login_username_error">Usernames can only be made up of letters, digits, and the following symbols: . _ - @</string>
    <string name="CS_username_not_exist">The account does not exist. Please enter another one.</string>
    <string name="CS_password_incorrect">Incorrect account or password</string>
    <string name="CS_logining_message">Logging in… Please wait.</string>
    <string name="CS_bind_devices_excess">The account has already been associated with the maximum of 5 devices. Please go to %s to disassociate the account with one of the devices and log in again.</string>
    <string name="CS_password_too_short">At least 6 characters</string>
    <string name="CS_password_too_short_new">Must be at least a combination of 8 characters and digits.</string>
    <string name="CS_input_password_is_different">The two passwords you entered do not match.</string>
    <string name="CS_username_already_exist">The account already exists. Please enter another one.</string>
    <string name="CS_registering_message">Registering… Please wait.</string>
    <string name="CS_input_email">Email</string>
    <string name="CS_email_address_error">Enter a valid email address.</string>
    <string name="CS_next">Next</string>
    <string name="CS_back">Back</string>
    <string name="CS_email_already_verified">The email address has already been verified.</string>
    <string name="CS_reset_pwd_label">Reset password</string>
    <string name="CS_reset_pwd_succ_message">Password reset.</string>
    <string name="CS_edit_name_text">Enter nickname</string>
    <string name="CS_edit_devicename_text">Enter device name</string>
    <string name="CS_base_info_device_name">Device name:</string>
    <string name="CS_modify_pwd_title">Change password</string>
    <string name="CS_old_pwd_hint">Current password</string>
    <string name="CS_new_pwd_hint">New password</string>
    <string name="CS_confirm_pwd_hint">Reenter new password</string>
    <string name="CS_new_pwd_invalid">The new password is the same as the current password.</string>
    <string name="CS_error_old_pwd_message">Incorrect current password. Please reenter.</string>
    <string name="CS_modify_pwd">Change password</string>
    <string name="CS_modify_pwd_succ">The password has been changed.</string>
    <string name="CS_verify_waiting_progress_message">Verifying your password… Please wait.</string>
    <string name="CS_sending_email_waiting_message">Sending an email to the associated email address… Please wait.</string>
    <string name="CS_prompt_dialog_title">Information</string>
    <string name="CS_overload_message">Too many recent requests have been made. Please try later.</string>
    <string name="CS_overload_message_phone">You have made the maximum number of SMS verification code requests. Additional requests can be made after 24 hours.</string>
    <string name="CS_overload_message_email">You have made the maximum number of email verification requests. Please check your spam or junk mail folders. Additional requests can be made after 24 hours.</string>
    <string name="CS_active_email_overload_message">Reached the limit for sending verification emails. Please check your inbox or trash box. You can try again in 24 hours.</string>
    <string name="CS_inputerror_toomany_message">Too many incorrect attempts have been made. This account has been suspended. If you forgot your password, touch Forget password.</string>
    <string name="CS_server_unavailable_title">Connection failed</string>
    <string name="CS_server_unavailable_message">The network server is busy. Please retry later.</string>
    <string name="CS_retry">Retry</string>
    <string name="CS_no_network_title">No network connection</string>
    <string name="CS_no_network_content">The network server is unavailable. Please check your network connection.</string>
    <string name="CS_area_not_support_service">This service is not available in your region right now.</string>
    <string name="CS_area_not_support_service_new">Due to service location restrictions, the system is unable to provide services to you.</string>
    <string name="CS_saving">Saving…</string>
    <string name="CS_register_email">Register using email</string>
    <string name="CS_register_email_hint">example@mail.com</string>
    <string name="CS_register_via_phone_number">Register using phone number</string>
    <string name="CS_retrieve">Retrieve</string>
    <string name="CS_email_reset_pwd_submit">Submitting…</string>
    <string name="CS_send_email_upper_limit">You have made the maximum number of password reset email requests. Please check your spam or junk mail folders. Additional requests can be made after 24 hours.</string>
    <string name="CS_email_reset_pwd_message">Email sent to %s. Check your inbox and follow the instructions in the email to reset your password.</string>
    <string name="CS_email_verifysend_toast">Verification email sent. Please check your inbox.</string>
    <string name="CS_no_connection">No connection.</string>
    <string name="CS_input_right_verifycode">Incorrect verification code. Please try again.</string>
    <string name="CS_verification_send">Verification code sent to %s.</string>
    <string name="CS_verification_send_email">Verification code sent to %s. Please check your inbox.</string>
    <string name="CS_incorrect_verificode">Incorrect verification code. Please try again.</string>
    <string name="CS_email_register">Email</string>
    <string name="CS_phone_register">Phone number</string>
    <string name="CS_delete_account">Delete</string>
    <string name="CS_verify_account">Verify</string>
    <string name="CS_count_down">Get code (%s)</string>
    <string name="CS_grant_credentials_permission_message_header">The following applications are requesting permission to access your account, now and in the future.</string>
    <string name="CS_grant_permissions_header_text">Access request</string>
    <string name="CS_allow">Allow</string>
    <string name="CS_deny">Deny</string>
    <string name="CS_app_name">Huawei ID</string>
    <string name="CS_choose_account">Choose Huawei ID</string>
    <string name="CS_reset_pwd_step1">Enter the Huawei ID whose password you want to reset.</string>
    <string name="CS_no_security_Email_Phone">This ID is not associated with any security phone number or email address. Cannot retrieve the password.</string>
    <string name="CS_security_phone_error">This phone number cannot receive verification messages. Enter another.</string>
    <string name="CS_security_email_error">Incorrect email address. Enter another.</string>
    <string name="CS_username_already_login">ID already logged in.</string>
    <string name="CS_security_phone">Security phone number</string>
    <string name="CS_security_email">Security email address</string>
    <string name="CS_register_success">Your Huawei ID %s has been registered.</string>
    <string name="CS_reset_pwd_email">Select email address</string>
    <string name="CS_password_rule">Password must be made up of 8 to 32 characters, including uppercase and lowercase letters, and digits. It cannot be the same as your other accounts’ passwords.</string>
    <string name="updateNow">Apply</string>
    <string name="updateDesc">Update available. Update now?</string>
    <string name="update_title">Update notice</string>
    <string name="about">Update</string>
    <string name="tab_index">Home</string>
    <string name="tab_category">Categories</string>
    <string name="tab_huawei_channel">Huawei</string>
    <string name="tab_honor_channel">Honor S.</string>
    <string name="tips">Confirm</string>
    <string name="service">Services</string>
    <string name="agree">Allow</string>
    <string name="rejection">Deny</string>
    <string name="do_not_remind_again">Do not remind again</string>
    <string name="gps_store_message">Vmall need to get the position information for your automatic positioning service outlets. Do you agree?</string>
    <string name="gps_prompt_detail_message">GPS location will use a third-party service (Baidu Map). The service and its content are not controlled by Huawei. Please read its privacy policy before continuing.</string>
    <string name="flow_warning">Vmall requires Internet access and your location information to provide you with product browsing, purchase, service center search, and other services. By touching Agree, you agree to our <a href="0">End User License Agreement</a>.</string>
    <string name="agree_">Agree</string>
    <string name="giveup_buy">Ignore</string>
    <string name="dear_user">Dear user,</string>
    <string name="welcome_vmall">"

Huawei Technologies Co., Ltd. (Huawei) is a customer oriented company. Huawei respects your personal data and values your privacy. Please do not submit or provide any personal information to Huawei before reading, understanding and agreeing to this User Agreement."</string>
    <string name="use_vmall">By using this app, you agree to and accept</string>
    <string name="manage_protocol">User License Agreement</string>
    <string name="close">Close</string>
    <string name="agree_goon">Agree and Continue</string>
    <string name="product_basic">Basic</string>
    <string name="product_details">Pictures</string>
    <string name="product_parameters">Specs</string>
    <string name="product_evaluations">Reviews ({0})</string>
    <string name="setting">Settings</string>
    <string name="location_closed">Location services not available. Please check your settings.</string>
    <string name="force_update_notice">Because the version is too old or any other reason, you need to upgrade to a new version that you can continue to use. Do you upgrade now?</string>
    <string name="no_wifi_tip">Current non WiFi network, upgrade will consume mobile phone traffic.</string>
</resources>