<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:gravity="center" android:id="@id/cs_dialog_content" android:paddingLeft="@dimen/font20" android:paddingTop="@dimen/font20" android:paddingRight="@dimen/font20" android:paddingBottom="@dimen/font12" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res/com.vmall.client">
    <TextView android:textSize="@dimen/font14" android:textColor="@color/time_title" android:id="@id/center_service_dialog_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/font20" android:text="@string/tips" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" />
    <ScrollView android:id="@id/scroll_layout" android:fadingEdge="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/center_service_dialog_title">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/font13" android:textColor="@color/time_title" android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/gps_store_message" />
            <TextView android:textSize="@dimen/font11" android:textColor="@color/product_detail" android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/gps_prompt_detail_message" />
        </LinearLayout>
    </ScrollView>
    <RelativeLayout android:id="@id/checkbox_layout" android:background="@drawable/dialog_check_click_selector" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/font20" android:layout_below="@id/scroll_layout">
        <CheckBox android:id="@id/approve_open_gps" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" />
        <TextView android:textSize="@dimen/font13" android:textColor="@color/time_title" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/font10" android:text="@string/do_not_remind_again" android:layout_toRightOf="@id/approve_open_gps" android:layout_centerVertical="true" />
    </RelativeLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/button_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/font10" android:layout_below="@id/checkbox_layout">
        <com.vmall.client.view.VmallButton android:id="@id/cs_dialog_cancel_bt" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginRight="10.0dip" android:text="@string/cancel" android:layout_weight="1.0" app:level="big3" app:buttonSize="big" />
        <com.vmall.client.view.VmallButton android:id="@id/cs_dialog_sure_bt" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/agree" android:layout_weight="1.0" app:level="big0" app:buttonSize="big" />
    </LinearLayout>
</RelativeLayout>