<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="horizontal" android:id="@id/update_num" android:paddingLeft="@dimen/font20" android:paddingTop="@dimen/font20" android:paddingRight="@dimen/font20" android:paddingBottom="@dimen/font12" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res/com.vmall.client">
    <TextView android:textSize="@dimen/font14" android:textColor="@color/time_title" android:id="@id/waring_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/font20" android:text="@string/tips" android:layout_alignParentTop="true" android:layout_centerInParent="true" />
    <TextView android:textSize="@dimen/font13" android:textColor="@color/time_title" android:id="@id/flow_warning" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/flow_warning" android:layout_below="@id/waring_title" />
    <RelativeLayout android:id="@id/edit_num_layout" android:background="@drawable/dialog_check_click_selector" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_below="@id/flow_warning">
        <CheckBox android:id="@id/checkbox_tips" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" />
        <TextView android:textSize="@dimen/font13" android:textColor="@color/time_title" android:gravity="center" android:id="@id/product_num_text" android:layout_width="wrap_content" android:layout_height="25.0dip" android:layout_marginLeft="@dimen/font10" android:text="@string/do_not_remind_again" android:layout_toRightOf="@id/checkbox_tips" android:layout_centerVertical="true" />
    </RelativeLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/button_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/font10" android:layout_below="@id/edit_num_layout">
        <com.vmall.client.view.VmallButton android:id="@id/warning_cancel_bt" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginRight="10.0dip" android:text="@string/rejection" android:layout_weight="1.0" app:level="big3" app:buttonSize="big" />
        <com.vmall.client.view.VmallButton android:id="@id/warning_sure_bt" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/agree_" android:layout_weight="1.0" app:level="big0" app:buttonSize="big" />
    </LinearLayout>
</RelativeLayout>