<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:gravity="center" android:id="@id/update_content" android:background="@drawable/circle_angle" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res/com.vmall.client">
    <LinearLayout android:gravity="center" android:id="@id/title_layout" android:layout_width="fill_parent" android:layout_height="60.0dip" android:layout_alignParentTop="true">
        <TextView android:textSize="14.0sp" android:textColor="@color/black_seventy" android:id="@id/update_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/update_title" />
    </LinearLayout>
    <TextView android:textSize="13.0sp" android:textColor="@color/black_fifty" android:id="@id/update_detail" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="5.0dip" android:text="@string/updateDesc" android:layout_below="@id/title_layout" />
    <LinearLayout android:orientation="horizontal" android:paddingLeft="20.0dip" android:paddingTop="12.0dip" android:paddingRight="20.0dip" android:paddingBottom="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/update_detail">
        <com.vmall.client.view.VmallButton android:id="@id/update_later" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginRight="10.0dip" android:text="@string/giveup_buy" android:layout_weight="1.0" app:level="big3" app:buttonSize="big" />
        <com.vmall.client.view.VmallButton android:id="@id/update_now" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/updateNow" android:layout_weight="1.0" app:level="big0" app:buttonSize="big" />
    </LinearLayout>
</RelativeLayout>