<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/CS_background" android:paddingLeft="@dimen/cs_page_padding_layout" android:paddingTop="@dimen/cs_page_padding_top" android:paddingRight="@dimen/cs_page_padding_layout" android:paddingBottom="@dimen/cs_page_padding_bottom" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:scrollbarStyle="outsideOverlay" android:paddingLeft="@dimen/cs_page_padding_scrollView" android:paddingRight="@dimen/cs_page_padding_scrollView" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <EditText android:layout_gravity="end" android:id="@id/old_password" android:layout_width="fill_parent" android:layout_marginBottom="@dimen/cs_edittext_button_margin" android:hint="@string/CS_old_pwd_hint" android:singleLine="true" android:maxLength="32" android:inputType="textPassword" style="@style/CS_EmoutionUI3_EditTextStyle" />
            <include layout="@layout/cs_password_edit_view" />
            <EditText android:layout_gravity="center" android:id="@id/confirm_pwd_edit" android:layout_width="fill_parent" android:layout_marginTop="@dimen/cs_edittext_button_margin" android:hint="@string/CS_confirm_pwd_hint" android:singleLine="true" android:inputType="textPassword" style="@style/CS_EmoutionUI3_EditTextStyle" />
            <TextView android:textSize="@dimen/cs_text_size" android:textColor="@color/CS_black_65_percent" android:paddingLeft="@dimen/cs_view_margin" android:paddingRight="@dimen/cs_view_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/cs_oobe_margin_top" android:text="@string/CS_password_rule" />
        </LinearLayout>
    </ScrollView>
    <LinearLayout android:gravity="center_horizontal" android:orientation="horizontal" android:paddingLeft="@dimen/cs_page_padding_scrollView" android:paddingRight="@dimen/cs_page_padding_scrollView" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@id/btn_modify" android:text="@string/CS_modify_pwd" style="@style/CS_EmoutionUI3_HoloButtonStyle" />
    </LinearLayout>
</LinearLayout>